_themes/purity/static/css/style.css
/* ... */
img {
  max-width: 100%;
  height: auto;
  margin: 0 auto 1.25em;
}


/*========================*/
/*===  3. Columns      ===*/
/*========================*/

.one_half, .one_third, .one_fourth, .three_fourth, .two_third, .one_fifth, .two_fifth, .three_fifth, .four_fifth {
  margin-bottom: 1.25em;
  float: left;
  margin-right: 4%;
  position: relative;
}

.one_half {
  width: 48%;
}

.one_third {
  width: 30.66%;
}

.two_third {
  width: 65.34%;
}

.one_fourth {
  width: 22%;
}

.three_fourth {
  width: 74%;
}

.one_fifth {
  width: 16.8%;
}

.two_fifth {
  width: 37.6%;
}

.three_fifth {
  width: 58.4%;
}

.four_fifth {
  width: 79.2%;
}

.last {
  margin-right: 0 !important;
  clear: right;
}

.full-width {
  width: 100%;
}

.divider {
  display: block;
  width: 100%;
  height: 0;
  clear: both;
  margin: 20px 0px;
  position: relative;
}

.line {
  border-top: 1px dotted #ddd;
  margin-top: 28px;
  margin-bottom: 29px;
}

.top {
  text-align: right;
  border-top: 1px dotted #ddd;
  margin-top: 28px;
  margin-bottom: 29px;
  width: 98.35%;
}

.top a {
  font-size: 8px;
  line-height: 20px;
  position: absolute;
  right: -14px;
  top: -10px;
  color: #bbb;
}
.top a:hover {
  color: #d16f4e;
}


/*==========================*/
/*===  4. Typography     ===*/
/*==========================*/

/*==========================*/
/*===  4.1. Heading font ===*/
/*==========================*/

@font-face {
    font-family: 'LeagueGothicRegular';
    src: url('font/League_Gothic-webfont.eot');
    src: url('font/League_Gothic-webfont.eot?#iefix') format('embedded-opentype'),
         url('font/League_Gothic-webfont.woff') format('woff'),
         url('font/League_Gothic-webfont.ttf') format('truetype'),
         url('font/League_Gothic-webfont.svg#LeagueGothicRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

.nav, h1, h2, h3, h4, .tagline h1, .over span, .bold, .flex-caption {
  font-family: 'LeagueGothicRegular', Helvetica, Arial;
  font-weight: normal;
}


/*=================================*/
/*===  4.2. Typography elements ===*/
/*=================================*/

h1, h2, h3, h4, h5, h6 {
  letter-spacing: 0.02em;
  line-height: 1;
  color: #000;
}

.title a {
  color: #444;
}
.title a:hover {
  color: #d16f4e;
}

.pullleft, .pullright {
  float: right;
  font-size: 15px;
  font-style: italic;
  color: #999;
  width: 32%;
  margin: 20px 2px 14px 14px;
  padding: 20px;
  border-left: 2px solid #e1e1e1;
}

.pullleft {
  float: left;
  margin-left: 1px;
  margin-right: 20px;
}

.imageleft, .imageright {
  float: right;
  padding: 8px;
  margin: 8px 0px 8px 24px;
  border: 1px solid #e1e1e1;
}

.imageleft {
  float: left;
  margin: 8px 24px 8px 0px;
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 30px;
}

.border {
  border: 1px solid #e1e1e1;
  padding: 6px;
  margin-bottom: 4px;
  margin-bottom: 30px;
}

img.specific {
  width: auto;
}

.blockleft, .blockright {
  display: block;
  float: right;
  border: 1px solid #e1e1e1;
  margin: 8px 0px 8px 24px;
  padding: 8px;
}

.blockleft {
  float: left;
  margin: 8px 24px 8px 0px;
}

.caption {
  color: #aaa;
  font-size: 11px;
  font-style: italic;
  text-align: center;
  margin: 0;
}

blockquote {
  color: #aaa;
  font-size: 15px;
  font-style: italic;
  margin: 20px 0px 20px 20px;
  padding: 20px;
  border-left: 3px solid #ddd;
}

blockquote p {
  margin: 0px;
}

blockquote span {
  display: block;
  font-size: 12px;
  line-height: 20px;
  color: #555;
  float: right;
}


/*========================*/
/*===  5. Header       ===*/
/*========================*/

#header {
  z-index: 999;
  position: relative;
}
#header .inner {
  border-bottom: 1px dotted #ddd;
}
#header .logo {
  float: left;
  padding: 30px 0;
}


/*========================*/
/*===  5.1. Navigation ===*/
/*========================*/

.nav {
  float: right;
  height: 30px;
  margin: 40px 0;
}

.nav ul {
  list-style: none;
  position: relative;
}

.nav ul li {
  float: left;
  margin-left: 20px;
  position: relative;
  display: block;
  font-size: 22px;
}

.nav ul li > a {
  color: #666;
  padding: 0px 8px;
  line-height: 40px;
  text-decoration: none;
  display: block;
}
.nav ul li: hover > a {
  color: #d16f4e;
}

.nav ul li.current > a {
  color: #d16f4e;
}

.nav ul li.current > a:hover {
  color: #d16f4e;
}

.nav ul li ul {
  position: absolute;
  background: #fff;
  min-width: 170px;
  border: 1px solid #e6e6e6;
  display: none;
  left: -5px;
  top: 39px;
}

.nav ul li ul li {
  width: 100%;
  margin: 0 20px 0 0;
}

.nav ul li ul li a {
  line-height: 20px;
  padding: 10px 0;
  margin: 0 12px;
  color: #888;
  border-bottom: 1px dotted #ddd;
}

.nav ul li ul li: last-child a {
  border: 0px;
}

/* Mobile Navigation */
#mobile-nav {
  display: none;
  -webkit-appearance: none;
  width: 100%;
  padding: 10px 14px;
  border: 1px solid #e0e0e0;
  barder-radius: 0;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  -o-border-radius: 0;
  background: #fff url('../img/select-arrows.png') no-repeat right center;
}


/*=========================*/
/*===  6. Main Content  ===*/
/*=========================*/

.tagline {
  padding: 30px 0px;
  width: 900px;
  margin: 0 auto;
  border-bottom: 1px dotted #ddd;
}

.tagline h1 {
  float: left;
  color: #444;
  font-size: 2em;
  line-height: 1;
  margin: 0px;
}

.tagline span {
  float: left;
  font-size: 0.75em;
  line-height: 1;
  border-left: 1px dotted #ccc;
  margin: 0.625em 0px 0px 1.5em;
  padding-left: 14px;
}

#main .inner {
  padding-top: 30px;
}

.custom_content {
  padding-bottom: 10px;
}

.content {
  color: #333;
  width: 662px;
  float: left;
  text-align: justify;
  letter-spacing: 0.04em;
  margin-right: 20px;
}

.content .gallery {
  margin-bottom: 30px;
}

.content .gallery a > img {
  width: 644px;
}
/* ... */

